[package]
name = "pact-mock-server"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[dependencies]
getopts = "^0.2"
pact_mock_server_matchers = { path = "../pact_mock_server_matchers" }
p-macro = "^0.2.0"
env_logger = "^0.3.2"
log = "^0.3.5"

[dependencies.rustful]
version = "^0.7.0"
default-features = false
features = ["rustc_json_body", "ssl"]
