# This is a "workspace" crate, which declares that an entire family of Rust
# crates are developed together. This allows running commands like
# `cargo test --all`, and it also allows our child crates to share build
# artifacts, speeding up compilation considerably.

[workspace]
members = ["pact_matching", "pact_mock_server", "pact_mock_server_cli", "pact_consumer", "pact_verifier", "pact_verifier_cli"]
