[package]
name = "pactmockserver"
version = "0.1.0"
authors = ["Eduard Litau <eduard.litau@gmail.com>"]
edition = "2018"

[lib]
name = "pactmockserver"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "^0.22"
libc = "0.2.101"
lazy_static = "0.2"
pact_mock_server = "0.4.0" # This is the pact-reference rust implementation
