[package]
name = "pact_matching"
version = "0.2.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements request and response matching logic"
documentation = "http://www.pact.io/reference/rust/libpact_matching-docs-0.2.0/pact_matching/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/libpact_matching"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"

[dependencies]
rustc-serialize = "^0.3"
log = "^0.3.5"
regex = "^0.1.56"
p-macro = "^0.2.0"
maplit = "^0.1.3"
lazy_static = "^0.1.15"
semver = "^0.2.0"
itertools = "^0.4.15"
rand = "^0.3"

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.4.1"
