[package]
name = "pact_mock_server"
version = "0.2.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements in process mock server"
documentation = "http://www.pact.io/reference/rust/libpact_mock_server-docs-0.2.0/pact_mock_server/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/libpact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"

[dependencies]
libc = "^0.2.9"
rustc-serialize = "^0.3"
pact_matching = "^0.2.0"
# pact_matching = { path = "../libpact_matching" }
p-macro = "^0.2.0"
env_logger = "^0.3.2"
log = "^0.3.5"
maplit = "^0.1.3"
lazy_static = "^0.1.15"
uuid = { version = "^0.2.2", features = ["v4"] }
itertools = "^0.4.15"

[dependencies.hyper]
version = "^0.9.7"
default-features = false

[lib]
crate-type = ["dylib", "rlib", "staticlib"]

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.5.1"
