[package]
name = "pact_consumer"
version = "0.1.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust module that provides support for writing consumer pact tests"
documentation = "https://docs.rs/pact_consumer/0.1.0/pact_consumer/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.9"
rustc-serialize = "0.3"
pact_matching = "0.1.1"
# pact_matching = { path = "../pact_matching" }
pact_mock_server = "0.1.1"
# pact_mock_server = { path = "../pact_mock_server" }
p-macro = "0.2.0"
log = "0.3.5"
maplit = "0.1.3"
lazy_static = "0.1.15"
itertools = "0.4.18"
uuid = { version = "0.2.2", features = ["v4"] }

[dependencies.hyper]
version = "0.9.7"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
quickcheck = "0.2"
expectest = "0.5.1"
