[package]
name = "pact_consumer"
version = "0.3.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>", "Eric Kidd <git@randomhacks.net>"]
description = "Pact-Rust module that provides support for writing consumer pact tests"
documentation = "https://docs.rs/pact_consumer/0.2.1/pact_consumer/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT AND Apache-2.0"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.9"
pact_matching = { version = "0.3.0", path = "../pact_matching" }
pact_mock_server = { version = "0.3.0", path = "../pact_mock_server" }
log = "0.3.5"
maplit = "0.1.3"
lazy_static = "0.1.15"
regex = "0.1.56"
serde_json = "1.0"
itertools = "0.4.18"
url = "1.5.1"
uuid = { version = "0.2.2", features = ["v4"] }

[dependencies.hyper]
version = "0.9.7"
default-features = false

[dev-dependencies]
quickcheck = "0.2"
env_logger = "0.4"
expectest = "0.5.1"
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
p-macro = "0.2.0"
