[package]
name = "pact_matching"
version = "0.3.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements request and response matching logic"
documentation = "https://docs.rs/pact_matching/0.3.1/pact_matching/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_matching"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
hex = "0.2.0"
log = "0.3.8"
regex = "0.2.2"
p-macro = "0.2.0"
maplit = "0.1.4"
lazy_static = "0.2.8"
semver = "0.7.0"
itertools = "0.6.1"
rand = "0.3.16"
sxd-document = "0.2.4"
ansi_term = "0.9.0"
difference = "1.0.0"

[dependencies.hyper]
version = "0.9.7"
default-features = false

[dev-dependencies]
quickcheck = "0.4.1"
expectest = "0.9.1"
env_logger = "0.4.3"
