[package]
name = "pact_mock_server"
version = "0.3.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements in process mock server"
documentation = "https://docs.rs/pact_mock_server/0.3.0/pact_mock_server/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.9"
serde_json = "1.0"
pact_matching = { version =  "0.3.0", path = "../pact_matching" }
p-macro = "0.2.0"
env_logger = "0.3.2"
log = "0.3.5"
maplit = "0.1.3"
lazy_static = "0.1.15"
uuid = { version = "0.2.2", features = ["v4"] }
itertools = "0.4.15"

[dependencies.hyper]
version = "0.9.7"
default-features = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dev-dependencies]
quickcheck = "0.2"
expectest = "0.5.1"
