[package]
name = "pact_verifier"
version = "0.2.2"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements provider verification functions"
documentation = "https://docs.rs/pact_verifier/0.2.2/pact_verifier/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.9"
serde_json = "1.0"
pact_matching = "0.2.2"
# pact_matching = { path = "../pact_matching" }
pact_consumer = "0.2.0"
# pact_consumer = { path = "../pact_consumer" }
p-macro = "0.2.0"
log = "0.3.5"
maplit = "0.1.3"
lazy_static = "0.1.15"
itertools = "0.4.18"
ansi_term = "0.9"
regex = "0.1"
difference = "0.4"

[dependencies.hyper]
version = "0.9.7"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
quickcheck = "0.2"
expectest = "0.5.1"
env_logger = "0.3.2"
