[package]
name = "pact_verifier_cli"
version = "0.2.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Standalone pact verifier for provider pact verification"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.9"
clap = "2.13.0"
# pact_matching = "0.2.1"
pact_matching = { path = "../pact_matching" }
# pact_verifier = "0.2.0"
pact_verifier = { path = "../pact_verifier" }
p-macro = "0.2.0"
simplelog = "0.1.0"
log = "0.3.5"
maplit = "0.1.3"
lazy_static = "0.1.15"
rand = "0.3"
regex = "0.1"

[dependencies.hyper]
version = "0.9.7"
default-features = false

[dev-dependencies]
quickcheck = "0.2"
expectest = "0.5.1"
