[package]
name = "pactmockserver"
version = "0.1.0"
authors = []

[lib]
name = "pactmockserver"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.15.1"
libc = "0.2.9"
rustler_codegen = "0.15.1"
lazy_static = "0.2"
pact_mock_server = { version =  "0.2.3", path = "../../../rust/pact_mock_server" }
