[package]
name = "pact_matching"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[dependencies]
rustc-serialize = "^0.3"
log = "^0.3.5"
regex = "^0.1.56"
p-macro = "^0.2.0"
maplit = "^0.1.3"
lazy_static = "^0.1.15"
semver = "^0.2.0"
itertools = "^0.4.11"

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.4.1"
