[package]
name = "pact_mock_server"
version = "0.0.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Pact-Rust support library that implements in process mock server"
documentation = "http://www.pact.io/reference/rust/libpact_mock_server-docs-0.0.1/pact_mock_server/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/v1/libpact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"

[dependencies]
libc = "^0.2.9"
rustc-serialize = "^0.3"
pact_matching = "^0.0.0"
p-macro = "^0.2.0"
env_logger = "^0.3.2"
log = "^0.3.5"
maplit = "^0.1.3"
lazy_static = "^0.1.15"
uuid = "^0.2.2"
itertools = "^0.4.11"

[dependencies.rustful]
version = "^0.8.0"
default-features = false
features = ["rustc_json_body"]

[dependencies.hyper]
version = "^0.8.0"
default-features = false

[lib]
crate-type = ["dylib", "rlib"]

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.5.1"
