[package]
name = "libpact_v1_matchers"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[dependencies]
rustc-serialize = "^0.3"
log = "^0.3.5"
regex = "^0.1.56"
p-macro = "^0.2.0"
libpact_v1_models = { path = "../libpact_v1_models" }

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.4.1"
