[package]
name = "pact_v1_mock_server"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[dependencies]
libc = "^0.2.8"
rustc-serialize = "^0.3"
libpact_v1_matching = { path = "../libpact_v1_matching" }
p-macro = "^0.2.0"
env_logger = "^0.3.2"
log = "^0.3.5"
maplit = "^0.1.3"
lazy_static = "^0.1.15"
hyper = "^0.8.0"
uuid = "^0.1.18"

[dependencies.rustful]
version = "^0.7.0"
default-features = false
features = ["rustc_json_body"]

[lib]
name = "pact_v1_mock_server"
crate-type = ["dylib"]
