[package]
name = "pact_mock_server_cli"
version = "0.0.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Standalone pact mock server for consumer pact tests"
documentation = "http://www.pact.io/reference/rust/pact_mock_server_cli-docs-0.0.1/pact_mock_server_cli/"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/v1/pact_mock_server_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"

[dependencies]
libc = "^0.2.9"
clap = "^2.4.0"
rustc-serialize = "^0.3"
pact_matching = { path = "../libpact_matching" }
pact_mock_server = { path = "../libpact_mock_server" }
p-macro = "^0.2.0"
simplelog = "^0.1.0"
log = "^0.3.5"
uuid = "^0.2.2"
maplit = "^0.1.3"
rand = "^0.3"
# webmachine-rust = { git = "https://github.com/uglyog/webmachine-rust.git" }
webmachine-rust = { path = "/home/ronald/Development/Projects/Pact/webmachine-rust" }
regex = "^0.1"

[dependencies.hyper]
version = "^0.9.7"
default-features = false

[dev-dependencies]
quickcheck = "^0.2"
expectest = "^0.5.1"
