[package]
name = "pact-v1-mock-server"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[dependencies]
getopts = "^0.2"
rustc-serialize = "^0.3"
pact_v1_matching = { path = "../libpact_v1_matching" }
pact_v1_mock_server = { path = "../libpact_v1_mock_server" }
p-macro = "^0.2.0"
env_logger = "^0.3.2"
log = "^0.3.5"
uuid = "^0.1.18"

[dependencies.rustful]
version = "^0.7.0"
default-features = false
features = ["rustc_json_body"]
